June update, fix collapse mask

--- a/CV.css
+++ b/CV.css
@@ -157,7 +157,11 @@ svg {
     opacity: 0;
     transition: opacity 0.6s;
     padding-bottom: 1.2rem;
+    z-index: -1;
 }
+    .rightColMask-show {
+        z-index: auto;
+    }
 
 .sticky {
     position: fixed;
